--- a/Hand Detection trials.ipynb
+++ b/Hand Detection trials.ipynb
@@ -191,11 +191,12 @@
     "    # Apply thresholding segmentation\n",
     "    ret,thresholded = cv2.threshold(skin_region,0,255,cv2.THRESH_BINARY)\n",
     "    # Find contours around the thresholded regions\n",
-    "    contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    contours, hierarchy = cv2.findContours(thresholded, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "    contours = max(contours, key=lambda x: cv2.contourArea(x))\n",
     "    # Apply convex hull algorithm\n",
     "    convex_hull = cv2.convexHull(contours)\n",
     "    # Decide the area of contours (with delta relaxation)\n",
+    "    min_x, max_x, min_y, max_y = min(convex_hull[:,:,0])[0], max(convex_hull[:,:,0])[0],min(convex_hull[:,:,1])[0],max(convex_hull[:,:,1])[0]\n",
     "    roi = [max(0,min_y-delta), min(max_y+delta, frame.shape[0]), max(0,min_x-delta), min(max_x+delta,frame.shape[1])]\n",
     "    return roi"
    ]
